8310335: JFR: Modernize collections and switch statements
Reviewed-by: mgronlun